--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "devDependencies": {
     "@astrojs/tailwind": "1.0.0",
     "astro": "1.1.1"
+  },
+  "dependencies": {
+    "@astrojs/rss": "^1.0.0"
   }
 }
