--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
     "astro": "astro"
   },
   "devDependencies": {
+    "@astrojs/react": "^1.1.0",
     "@astrojs/tailwind": "1.0.0",
-    "astro": "1.1.1"
+    "@types/react": "^18.0.17",
+    "astro": "1.1.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "dependencies": {
-    "@astrojs/rss": "1.0.0"
+    "@astrojs/rss": "1.0.0",
+    "classnames": "^2.3.1"
   }
 }
